--- a/react-js/public/index.html
+++ b/react-js/public/index.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+
 <html lang="en">
   <head>
     <meta charset="utf-8" />
@@ -17,6 +18,7 @@
   </head>
 
   <body>
+    <div id="root"></div>
     <div id="root1"></div>
     <div id="root2"></div>
   </body>
